# EventFlow

./: README.md  main.py  pyproject.toml
backend/: docker-compose.yaml
backend/accounts/: admin.py  emails.py  models.py  permissions.py  serializers.py  tokens.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/events/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_event_refund_eligible.py  0003_event_is_featured_event_is_suppressed.py
backend/registrations/: admin.py  concurrency_register_test.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/registrations/migrations/: 0001_initial.py
backend/tickets/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/tickets/migrations/: 0001_initial.py
