[project]
name = "event-management-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "redis>=8.0.1",
]
